# binius64

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-AGPL-3.0.txt  LICENSE-MIT.txt  README.md  \  build_benchmark_results.json  compare_keccak  compare_keccak.rs  compare_rounds  compare_rounds.rs  constraint_analysis.md  coverage.py  custom_gate_example.rs  debug_blackbox.rs  debug_equality.rs  debug_eval  debug_eval.rs  debug_icmp_ult  debug_icmp_ult.rs  direct_constraint_approach.rs  final_comparison.md  minimal_icmp  minimal_icmp.rs  minimal_raw_constraint.rs  optimal_big_sigma.rs  raw_constraint_api.rs  simple_test  simple_test.rs  step_debug.rs  test_all_comparisons  test_all_comparisons.rs  test_div_mod  test_div_mod.rs  (+13 more)
crates/beamish/: Cargo.toml  DESIGN.md  PLAN.md
crates/beamish/_examples/: expression_demo.rs  keccak_chi.rs
crates/beamish/_src/: lib.rs
crates/beamish/examples/: keccak.rs  keccak_full_demo.rs  native_forms.rs  optimizations.rs  sha256.rs
crates/beamish/src/: constraints.rs  expr.rs  lib.rs  reference.rs  types.rs
crates/beamish/tests/: constraint_generation.rs  constraint_reduction_tests.rs  constraint_reduction_tests.rs.disabled  expression_simplification_tests.rs  expression_simplification_tests.rs.disabled  frontend_comparison.rs  generation_tests.rs  panic_test.rs  sha256_verification.rs
crates/core/: Cargo.toml
crates/core/src/: constraint_system.rs  consts.rs  error.rs  lib.rs  verify.rs  word.rs
crates/core/test_data/: README.md
crates/examples/: Cargo.toml  README.md
crates/examples/benches/: blake2b.rs  blake2s.rs  ethsign.rs  hashsign.rs  keccak.rs  platform.rs
crates/examples/examples/: blake2s.rs  blake3.rs  ethsign.rs  hash_based_sig.rs  hashsign.rs  keccak.rs  prover.rs  semaphore_ecdsa.rs  sha256.rs  sha512.rs  verifier.rs  zklogin.rs
crates/examples/snapshots/: README.md  blake2s.snap  blake3.snap  ethsign.snap  hash_based_sig.snap  hashsign.snap  keccak.snap  semaphore_ecdsa.snap  sha256.snap  sha512.snap  zklogin.snap
crates/examples/src/: cli.rs  json_export.rs  lib.rs  lib_vision.rs  snapshot.rs  timing.rs
crates/frontend/: Cargo.toml
crates/frontend/ceck/: Cargo.toml
crates/frontend/examples/: boojum_demo.rs  boojum_optimization_comparison.rs  boojum_type_demo.rs  boojum_typed_demo.rs  boojum_xor_optimization_demo.rs
crates/frontend/jwt-scripts/: client_secrets.json
crates/frontend/jwt_generation_scripts/: google_drive.py
crates/frontend/src/: constraint_system.rs  constraint_verifier.rs  lib.rs  stat.rs  uniqueness_propagator.rs  util.rs  word.rs
crates/frontend/tests/: test_assertion_paths.rs
crates/int_mult/: Cargo.toml
crates/int_mult/src/: lib.rs  prove.rs  provers.rs
crates/math/: Cargo.toml
crates/math/benches/: additive_ntt.rs  batch_invert.rs  large_transform.rs  ntt.rs  ntt_cache_demonstration.rs
crates/math/src/: batch_invert.rs  error.rs  field_buffer.rs  fold.rs  inner_product.rs  lib.rs  line.rs  matrix.rs  reed_solomon.rs  ring_switch.rs  tensor_algebra.rs  test_utils.rs  univariate.rs
crates/maybe-rayon/: Cargo.toml
crates/pcs/: Cargo.toml  lib.rs
crates/pcs/basefold/: prover.rs  verifier.rs
crates/pcs/multilinear_sumcheck/: field_buffer_multilinear_sumcheck.rs  mod.rs  multilinear_sumcheck.rs  sumcheck_prover.rs
crates/pcs/one_bit/: prover.rs  verifier.rs
crates/pcs/ring_switch/: eq_ind.rs  eq_ind_eval.rs  mod.rs
crates/pcs/utils/: big_field_multilinear.rs  constants.rs  eq_ind.rs  mod.rs  utils.rs
crates/prover/: Cargo.toml  bench_trace_base64.json  trace.json
crates/prover-client/: Cargo.toml  README.md  build.rs  test_prover_client.sh
crates/prover-client/src/: error.rs  ffi.rs  ffi_impl.rs  lib.rs  prover_client.rs
crates/prover-client/tests/: prover_client_test.rs
crates/prover-interface/: Cargo.toml  README.md
crates/prover-interface/examples/: basic_proof.rs
crates/prover-interface/src/: config.rs  error.rs  ffi.rs  lib.rs  prover.rs  types.rs
crates/prover-interface/tests/: integration.rs
crates/prover/benches/: and_reduction.rs  batch_invert.rs  binary_merkle_tree.rs  fast_ntt_64.rs  fold_words.rs  intmul.rs  one_bit_zerocheck.rs  pcs.rs  ring_switch.rs  shift.rs  shift_reduction.rs  sumcheck.rs  vision.rs
crates/prover/src/: error.rs  fold_word.rs  formatting.rs  lib.rs  pcs.rs  prove.rs  ring_switch.rs
crates/prover/tests/: prove_verify.rs  shift.rs
crates/spark2/: Cargo.toml  DESIGN.md  PLAN.md
crates/spark2/examples/: expression_demo.rs  keccak_chi.rs
crates/spark2/src/: lib.rs
crates/transcript/: Cargo.toml
crates/transcript/src/: lib.rs  transcript.rs
crates/utils/: Cargo.toml  build.rs
crates/utils/src/: lib.rs  platform_diagnostics.rs  random_access_sequence.rs  serialization.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: config.rs  error.rs  fields.rs  lib.rs  pcs.rs  verify.rs
crates/zkl/: Cargo.toml
crates/zkl/snapshots/: README.md  stat_output.snap
crates/zkl/src/: main.rs
prover/examples/: Cargo.toml  README.md
prover/examples/benches/: blake2b.rs  blake2s.rs  cost_model.rs  ethsign.rs  hashsign.rs  keccak.rs  sha256.rs  sha512.rs
prover/examples/examples/: bitcoin_header_chain.rs  bitcoin_p2pkh.rs  blake2b.rs  blake2s.rs  ethsign.rs  hashsign.rs  keccak.rs  prover.rs  sha512.rs  zklogin.rs
prover/examples/snapshots/: README.md  blake2b.snap  blake2s.snap  ethsign.snap  hashsign.snap  keccak.snap  sha256.snap  sha512.snap  zklogin.snap
prover/examples/src/: bench_utils.rs  cli.rs  lib.rs  snapshot.rs
prover/spartan-prover/: Cargo.toml
prover/spartan-prover/src/: error.rs  lib.rs  pcs.rs  wiring.rs
prover/spartan-prover/tests/: integration_test.rs
verifier/circuits/: Cargo.toml
verifier/circuits/src/: base64.rs  bytes.rs  concat.rs  fixed_byte_vec.rs  hmac.rs  jwt_claims.rs  lib.rs  multiplexer.rs  popcount.rs  ripemd.rs  rs256.rs  slice.rs  zklogin.rs
verifier/circuits/tests/: gate_fusion_keccak.rs
verifier/frontend/: Cargo.toml
verifier/spartan-frontend/: Cargo.toml
(+965 files in other folders)
