[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Irreducible Team <opensource@irreducible.com>"]

[profile.release]
lto = "thin"
debug = true

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
inherits = "release"
debug = true

[workspace.dependencies]
auto_impl = "1.2.0"
blake2 = "0.10.6"
bytemuck = { version = "1.18.0", features = [
    "derive",
    "min_const_generics",
    "must_cast",
] }
bytes = "1.7.2"
cfg-if = "1.0.0"
criterion = "0.6.0"
derive_more = "0.99.17"
digest = "0.10.7"
generic-array = "0.14.7"
getrandom = "0.3.3"
itertools = "0.14.0"
paste = "1.0.15"
proptest = "1.2.0"
rand = { version = "0.9.1", default-features = false, features = ["std"] }
rayon = "1.8.0"
seq-macro = "0.3.5"
subtle = "2.5.0"
thiserror = "2.0.3"
transpose = "0.2.2"
tracing = "0.1.38"
trait-set = "0.3.0"

[workspace.lints.clippy]
needless_range_loop = "allow"

[workspace.metadata.typos]
default.extend-words = { "typ" = "typ", "Toom" = "Toom" }
