[workspace]
members = ["crates/*", "crates/frontend/ceck"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Irreducible Team <opensource@irreducible.com>"]

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
debug = true

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
inherits = "release"
debug = true

[workspace.dependencies]
anyhow = "1.0.98"
assert_matches = "1.5.0"
auto_impl = "1.2.0"
base64 = "0.22.1"
blake2 = "0.10.6"
bytemuck = { version = "1.18.0", features = [
    "derive",
    "min_const_generics",
    "must_cast",
] }
bytes = "1.7.2"
cfg-if = "1.0.0"
clap = { version = "4.5", features = ["derive"] }
cranelift-entity = "0.121.1"
criterion = { version = "0.6.0", default-features = false }
derive_more = "0.99.17"
digest = "0.10.7"
generic-array = "0.14.7"
getrandom = "0.3.3"
getset = "0.1.6"
hex-literal = "1.0.0"
either = "1.11.0"
itertools = "0.14.0"
jwt-simple = { version = "0.12.12", default-features = false }
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
paste = "1.0.15"
pest = "2.8.1"
pest_derive = "2.8.1"
proptest = { version = "1.2.0", default-features = false, features = ["std"] }
rand = { version = "0.9.1", default-features = false, features = [
    "std",
    "std_rng",
] }
rayon = "1.10.0"
regex = "1.10"
# Uses RC because latest stable rsa-0.9.8 API requires RNG from rand=0.6
rsa = { version = "0.10.0-rc.3", features = ["sha2"] }
seq-macro = "0.3.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "2.0.3"
transpose = "0.2.2"
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing-profile = "0.10.9"
trait-set = "0.3.0"
z3 = "0.13.3"


[workspace.lints.clippy]
needless_range_loop = "allow"

[workspace.metadata.typos]
default.extend-words = { "typ" = "typ", "Toom" = "Toom", "inouts" = "inouts", "ceck" = "ceck" }
default.extend-ignore-re = ["(?Rm)^.*(#|//)\\s*spellchecker:disable-line$"]
