[package]
name = "binius-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-utils = { path = "../utils" }
bytemuck = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
