[package]
name = "binius-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
binius-core = { path = "../core" }
binius-frontend = { path = "../frontend" }
binius-verifier = { path = "../verifier" }
binius-prover = { path = "../prover", default-features = false }
binius-utils = { path = "../utils" }
clap.workspace = true
tracing.workspace = true
tracing-profile.workspace = true
ethsign = "0.9.0"
tiny-keccak = "2.0.2"
rand.workspace = true

[dev-dependencies]
base64.workspace = true
jwt-simple.workspace = true
rand.workspace = true
sha2.workspace = true
criterion.workspace = true

[[bench]]
name = "keccak"
harness = false

[[bench]]
name = "ethsign"
harness = false

[features]
default = ["rayon"]
perfetto = ["tracing-profile/perfetto"]
rayon = ["binius-prover/rayon"]
