[package]
name = "binius-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
binius-core = { path = "../core" }
binius-frontend = { path = "../frontend" }
binius-verifier = { path = "../verifier" }
binius-prover = { path = "../prover", default-features = false }
binius-utils = { path = "../utils", features = ["platform-diagnostics"] }
clap.workspace = true
tracing.workspace = true
tracing-profile.workspace = true
ethsign = "0.9.0"
tiny-keccak = "2.0.2"
rand.workspace = true
base64.workspace = true
blake2.workspace = true
jwt-simple.workspace = true
sha2.workspace = true
hex.workspace = true
k256 = { workspace = true, features = ["arithmetic"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "keccak"
harness = false

[[bench]]
name = "ethsign"
harness = false

[[bench]]
name = "blake2s"
harness = false

[features]
default = ["rayon"]
perfetto = ["tracing-profile/perfetto"]
rayon = ["binius-prover/rayon"]

[[example]]
name = "prover"
path = "examples/prover.rs"

[[example]]
name = "verifier"
path = "examples/verifier.rs"

[[example]]
name = "padding_validation_test"
path = "examples/padding_validation_test.rs"
