[package]
name = "binius-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
binius-core = { path = "../core" }
binius-frontend = { path = "../frontend" }
binius-verifier = { path = "../verifier", default-features = false }
binius-prover = { path = "../prover", default-features = false }
binius-utils = { path = "../utils", features = ["platform-diagnostics"] }
clap.workspace = true
tracing.workspace = true
tracing-profile.workspace = true
blake2.workspace = true
ethsign = "0.9.0"
tiny-keccak = "2.0.2"
rand.workspace = true
base64.workspace = true
jwt-simple.workspace = true
sha2.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "blake2b"
harness = false

[[bench]]
name = "keccak"
harness = false

[[bench]]
name = "ethsign"
harness = false

[[bench]]
name = "blake2s"
harness = false

[[bench]]
name = "hashsign"
harness = false

[features]
default = ["rayon"]
perfetto = ["tracing-profile/perfetto"]
rayon = ["binius-prover/rayon", "binius-verifier/rayon"]

[[example]]
name = "prover"
path = "examples/prover.rs"

[[example]]
name = "verifier"
path = "examples/verifier.rs"
