[package]
name = "binius-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-core = { path = "../core" }
cranelift-entity = { workspace = true }
hex-literal.workspace = true
num-bigint = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true, features = ["std_rng", "thread_rng"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
smallvec.workspace = true

[dev-dependencies]
base64 = { workspace = true }
blake2 = { workspace = true }
hmac = { workspace = true }
jwt-simple = { workspace = true }
k256 = { workspace = true, features = ["arithmetic"] }
rand = { workspace = true, features = ["std_rng", "thread_rng"] }
rsa = { workspace = true, features = ["sha2"] }
hex-literal = { workspace = true }
num-traits = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
