[package]
name = "binius-int-mult"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
binius-field = { path = "../field" }
binius-math = { path = "../math" }
binius-transcript = { path = "../transcript" }
itertools.workspace = true

[dev-dependencies]
proptest.workspace = true
rand = { workspace = true, features = ["std_rng", "thread_rng"] }
