[package]
name = "binius-math"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field", default-features = false }
binius-maybe-rayon = { path = "../maybe-rayon", default-features = false }
binius-utils = { path = "../utils", default-features = false }
bytemuck.workspace = true
getset.workspace = true
itertools.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
transpose.workspace = true

[dev-dependencies]
assert_matches.workspace = true
binius-math = { path = ".", features = ["test-utils"] }
criterion.workspace = true
lazy_static.workspace = true
proptest.workspace = true
rand = { workspace = true, features = ["std_rng", "thread_rng"] }

[features]
default = ["nightly-features", "rayon"]
test-utils = []
nightly-features = ["binius-field/nightly_features"]
rayon = ["binius-maybe-rayon/rayon"]

[lib]
bench = false

[[bench]]
name = "additive_ntt"
harness = false

[[bench]]
name = "large_transform"
harness = false

[[bench]]
name = "multilinear_evaluate"
harness = false
