[package]
name = "binius-math"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-utils = { path = "../utils" }
bytemuck.workspace = true
getset.workspace = true
itertools.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
transpose.workspace = true

[dev-dependencies]
assert_matches.workspace = true
binius-math = { path = ".", features = ["test-utils"] }
criterion.workspace = true
lazy_static.workspace = true
proptest.workspace = true
rand = { workspace = true, features = ["std_rng", "thread_rng"] }

[features]
default = ["nightly-features"]
test-utils = []
nightly-features = ["binius-field/nightly_features"]
rayon = ["binius-utils/rayon"]

[lib]
bench = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "multilinear_evaluate"
harness = false

[[bench]]
name = "ntt_cache_demonstration"
harness = false
