[package]
name = "binius-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-frontend = { path = "../frontend" }
binius-math = { path = "../math" }
binius-transcript = { path = "../transcript" }
binius-verifier = { path = "../verifier" }
binius-utils = { path = "../utils" }
bytemuck.workspace = true
bytes.workspace = true
digest.workspace = true
either.workspace = true
getset.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
binius-math = { path = "../math", features = ["test-utils"] }
blake2.workspace = true
criterion.workspace = true
proptest.workspace = true
rand = { workspace = true, features = ["std_rng"] }
rsa = { workspace = true, features = ["sha2"] }

[[bench]]
name = "binary_merkle_tree"
harness = false

[[bench]]
name = "sumcheck"
harness = false

[[bench]]
name = "shift"
harness = false

[features]
default = ["rayon"]
rayon = ["binius-utils/rayon"]
