[package]
name = "binius-spark2"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
binius-core = { path = "../core" }
binius-field = { path = "../field" }

[dev-dependencies]

[[example]]
name = "keccak_chi"
path = "examples/keccak_chi.rs"

[[example]]
name = "expression_demo"
path = "examples/expression_demo.rs"