[package]
name = "binius-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-frontend = { path = "../frontend" }
binius-transcript = { path = "../transcript" }
binius-utils = { path = "../utils" }
blake2.workspace = true
bytemuck.workspace = true
bytes.workspace = true
digest.workspace = true
getset.workspace = true
sha2 = { workspace = true, features = ["compress"] }
thiserror.workspace = true
