[package]
name = "binius-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-frontend = { path = "../frontend" }
binius-math = { path = "../math" }
binius-transcript = { path = "../transcript" }
binius-utils = { path = "../utils" }
bytemuck.workspace = true
bytes.workspace = true
digest.workspace = true
getset.workspace = true
itertools.workspace = true
sha2 = { workspace = true, features = ["compress"] }
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
