[package]
name = "binius-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-core = { path = "../core" }
binius-field = { path = "../field" }
binius-frontend = { path = "../frontend" }
binius-math = { path = "../math" }
binius-transcript = { path = "../transcript" }
binius-utils = { path = "../utils" }
blake2.workspace = true
bytemuck.workspace = true
bytes.workspace = true
digest.workspace = true
getset.workspace = true
itertools.workspace = true
sha2 = { workspace = true, features = ["compress"] }
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
binius-math = { path = "../math", features = ["test-utils"] }
rand = { workspace = true, features = ["std_rng"] }
itertools.workspace = true
