[package]
name = "binius-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
binius-circuits = { path = "../../verifier/circuits" }
binius-core = { path = "../../verifier/core" }
binius-frontend = { path = "../../verifier/frontend" }
binius-verifier = { path = "../../verifier/verifier", default-features = false }
binius-prover = { path = "../prover", default-features = false }
binius-utils = { path = "../../verifier/utils", features = ["platform-diagnostics"] }
clap.workspace = true
tracing.workspace = true
tracing-profile.workspace = true
blake2.workspace = true
ethsign = "0.9.0"
tiny-keccak = "2.0.2"
rand.workspace = true
base64.workspace = true
jwt-simple.workspace = true
sha2.workspace = true
ureq.workspace = true
hex.workspace = true

[dev-dependencies]
criterion.workspace = true
hex-literal.workspace = true

[[bench]]
name = "blake2b"
harness = false

[[bench]]
name = "keccak"
harness = false

[[bench]]
name = "ethsign"
harness = false

[[bench]]
name = "blake2s"
harness = false

[[bench]]
name = "hashsign"
harness = false

[features]
default = ["rayon"]
perfetto = ["tracing-profile/perfetto"]
rayon = ["binius-prover/rayon", "binius-verifier/rayon"]

[[example]]
name = "prover"
path = "examples/prover.rs"

[[example]]
name = "verifier"
path = "examples/verifier.rs"

# Tutorial examples
[[example]]
name = "getting_started_first_circuits"
path = "examples/tutorials/getting_started_first_circuits.rs"

[[example]]
name = "getting_started_proving"
path = "examples/tutorials/getting_started_proving.rs"

[[example]]
name = "getting_started_cli"
path = "examples/tutorials/getting_started_cli.rs"

[[example]]
name = "basics_word_semantics"
path = "examples/tutorials/basics_word_semantics.rs"

[[example]]
name = "basics_nondeterministic"
path = "examples/tutorials/basics_nondeterministic.rs"

[[example]]
name = "basics_xor_packing"
path = "examples/tutorials/basics_xor_packing.rs"

[[example]]
name = "circuits_control_flow"
path = "examples/tutorials/circuits_control_flow.rs"

[[example]]
name = "circuits_gadgets"
path = "examples/tutorials/circuits_gadgets.rs"

[[example]]
name = "circuits_data_structures"
path = "examples/tutorials/circuits_data_structures.rs"
