[package]
name = "binius-spartan-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../../verifier/field" }
binius-math = { path = "../../verifier/math" }
binius-transcript = { path = "../../verifier/transcript" }
binius-spartan-frontend = { path = "../../verifier/spartan-frontend" }
binius-spartan-verifier = { path = "../../verifier/spartan-verifier" }
binius-utils = { path = "../../verifier/utils" }
# Reuse infrastructure from binius-prover
binius-prover = { path = "../prover" }
binius-verifier = { path = "../../verifier/verifier" }
digest.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
smallvec.workspace = true

[features]
default = ["rayon"]
rayon = ["binius-utils/rayon"]
