[package]
name = "binius-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-core = { path = "../core" }
cranelift-entity = { workspace = true }
hex-literal.workspace = true
num-bigint = { workspace = true }
num-integer = { workspace = true }
rand.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
ripemd = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
blake2 = { workspace = true }
hmac = { workspace = true }
jwt-simple = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rsa = { workspace = true, features = ["sha2"] }
hex-literal = { workspace = true }
num-traits = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
sha2 = { workspace = true }
insta = { workspace = true }
